[workspace]

members = [
    "crates/rsonpath",
    "crates/rsonpath-lib",
    "crates/rsonpath-syntax",
    "crates/rsonpath-test",
]

exclude = ["crates/rsonpath-benchmarks", "crates/rsonpath-test-codegen"]

resolver = "2"

[workspace.dependencies]
# Project crates
rsonpath-lib = { version = "0.9.1", path = "./crates/rsonpath-lib", package = "rsonpath-lib", default-features = false }
rsonpath-syntax = { version = "0.3.1", path = "./crates/rsonpath-syntax" }
# Main dependencies
arbitrary = { version = "1.4.1" }
cfg-if = "1.0.0"
log = "0.4.22"
thiserror = "2.0.8"
# Dev-dependencies
itertools = "0.13.0"
pretty_assertions = "1.4.1"
proptest = "1.5.0"
test-case = "3.3.1"

[profile.dev]
lto = false

# Release should be used for benching, but not actually distributed.
[profile.release]
lto = "thin"
debug = 1

# This is the profile used for final binaries distributed via package managers.
# It prioritizes performance, and then binary size. We generally don't care about
# compile times for these, as they are built once on release in the CI and then distributed.
# The time impact of build is not large (~33% time increase).
[profile.distribution]
inherits = "release"
lto = "fat"          # Better codegen, much slower compile time.
codegen-units = 1    # Better codegen, much slower compile time.
debug = 0            # Smaller binary size.
strip = "debuginfo"  # Smaller binary size.
