[workspace]

members = [
    "crates/rsonpath",
    "crates/rsonpath-lib",
    "crates/rsonpath-syntax",
    "crates/rsonpath-syntax-proptest",
    "crates/rsonpath-test",
]

exclude = ["crates/rsonpath-benchmarks", "crates/rsonpath-test-codegen"]

resolver = "2"

[workspace.package]
version = "0.9.4"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rsonquery/rsonpath"
homepage = "https://rsonquery.github.io/rsonpath/"
edition = "2021"

[workspace.dependencies]
# Project crates
rsonpath-lib = { version = "0.9.4", path = "./crates/rsonpath-lib", package = "rsonpath-lib", default-features = false }
rsonpath-syntax = { version = "0.4.0", path = "./crates/rsonpath-syntax" }
rsonpath-syntax-proptest = { version = "0.4.0", path = "./crates/rsonpath-syntax-proptest" }
# Main dependencies
arbitrary = { version = "1.4.2" }
cfg-if = "1.0.4"
log = "0.4.29"
thiserror = "2.0.18"
# Dev-dependencies
ciborium = { version = "0.2.2", default-features = false }
insta = { version = "1.46.3" }
itertools = "0.14.0"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149", default-features = true, features = [
    "std",
    "float_roundtrip",
] }
test-case = "3.3.1"

[workspace.lints.rust]
explicit_outlives_requirements = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
cargo_common_metadata = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
empty_drop = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
flat_map_option = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
inconsistent_struct_constructor = "warn"
large_digit_groups = "warn"
let_underscore_must_use = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_midpoint = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
missing_assert_message = "warn"
missing_inline_in_public_items = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
no_mangle_with_rust_abi = "warn"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
precedence_bits  = "warn"
ptr_as_ptr = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
redundant_closure_for_method_calls = "warn"
redundant_test_prefix = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
significant_drop_tightening = "warn"
single_option_map = "warn"
string_lit_chars_any = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unseparated_literal_suffix = "warn"
unreadable_literal = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "warn"
used_underscore_items = "warn"
while_float = "warn"
# Panic-free lints
exit = "warn"

[profile.dev]
lto = false

# Release should be used for benching, but not actually distributed.
[profile.release]
lto = "thin"
debug = 1

# This is the profile used for final binaries distributed via package managers.
# It prioritizes performance, and then binary size. We generally don't care about
# compile times for these, as they are built once on release in the CI and then distributed.
# The time impact of build is not large (~33% time increase).
[profile.distribution]
inherits = "release"
lto = "fat"          # Better codegen, much slower compile time.
codegen-units = 1    # Better codegen, much slower compile time.
debug = 0            # Smaller binary size.
strip = "debuginfo"  # Smaller binary size.
