[package]
name = "align"
version = "0.1.0"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Utilities for alignemnt guarantees for data."
readme = "../README.md"
license = "MIT"
keywords = ["alignment", "byte", "bytes", "block", "blocks"]
categories = ["memory-management", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
len-trait = "0.6.1"
page_size = "0.4.2"