[package]
name = "align"
version = "0.1.0"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Utilities for alignment guarantees for data."
readme = "./README.md"
license = "MIT"
keywords = ["alignment", "byte", "bytes", "block", "blocks"]
categories = ["memory-management", "rust-patterns"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.4.0"
len-trait = "0.6.1"
page_size = "0.4.2"
static_assertions = "1.1.0"

[features]
default = ["simd"]
simd = []
