[package]
name = "rsonpath-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.*", features = ["derive"] }
libfuzzer-sys = { version = "0.4" }
serde = "1.0.213"
serde_json = "1.0.132"

[dependencies.rsonpath-lib]
path = "../crates/rsonpath-lib"
features = ["arbitrary"]

[dependencies.rsonpath-syntax]
path = "../crates/rsonpath-syntax"
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1
lto = false

[[bin]]
name = "fuzz_arbitrary_bytes"
path = "fuzz_targets/fuzz_arbitrary_bytes.rs"
test = false
doc = false

[[bin]]
name = "query_fuzz_arbitrary_bytes"
path = "fuzz_targets/query_fuzz_arbitrary_bytes.rs"
test = false
doc = false

[[bin]]
name = "query_fuzz_round_trip"
path = "fuzz_targets/query_fuzz_round_trip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_arbitrary_json"
path = "fuzz_targets/fuzz_arbitrary_json.rs"
test = false
doc = false
