[package]
name = "simd-codegen"
version = "0.1.0"
edition = "2021"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
description = "Code generation facilities for SIMD benchmarks."
readme = "../README.md"
license = "MIT"
keywords = ["internal"]
categories = ["development-tools"]
repository = "https://gitlab.inria.fr/cpaperma/rsonpath"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"

[dev-dependencies]
walkdir = "2.3.2"