[package]
name = "simdpath-stackless"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdpath-core = { path = "../simdpath-core" }
simdpath-stackless-macros = { path = "../simdpath-stackless-macros" }
log = "0.4.1"