[package]
name = "simdpath-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdpath-core = { path = "../simdpath-core"}
simdpath-stack-based = { path = "../simdpath-stack-based"}
simdpath-stackless = { path = "../simdpath-stackless"}