[package]
name = "simdpath"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdpath-stackless-macros = { path = "../simdpath-stackless-macros"}
clap = "2.33.3"
log = "0.4"
simple_logger = "1.11"
nom = "7.0.0"
memchr = "2.4.1"

[dev-dependencies]
criterion = "0.3.5"

[features]
default = ["simd_x86"]
simd_x86 = []
nosimd = []

[[bench]]
name = "simdpath_stack_based_vs_stackless"
harness = false

[[bench]]
name = "find_byte_sequence_benches"
harness = false