[package]
name = "simdpath"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
len-trait = "0.6.1"
log = "0.4"
memchr = "2.4.1"
nom = "7.0.0"
page_size = "0.4.2"
simple_logger = "1.11"

[build-dependencies]
simdpath-codegen = { path = "../simdpath-codegen" }
md5 = "0.7.0"
proc-macro2 = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
test-case = "1.2.1"

[features]
default = ["simd_x86"]
simd_x86 = []
nosimd = []

[[bench]]
name = "simdpath_stack_based_vs_stackless"
harness = false

[[bench]]
name = "find_byte_benches"
harness = false

[[bench]]
name = "find_byte_sequence_benches"
harness = false

[[bench]]
name = "depth_benches"
harness = false

[[bench]]
name = "find_any_of_sequences_benches"
harness = false
