[package]
name = "simdpath"
version = "0.1.0"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Blazing fast JSONPath query engine powered by SIMD."
readme = "../README.md"
license = "MIT"
keywords = ["json", "jsonpath", "query", "simd"]
build = "build.rs"
exclude = ["/data"]
categories = ["command-line-utilities", "text-processing", "database-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
align = { path = "../align" }
cfg-if = "1.0.0"
clap = "2.33.3"
len-trait = "0.6.1"
log = "0.4"
memchr = "2.4.1"
nom = "7.0.0"
simple_logger = "1.11"
static_assertions = "1.1.0"

[build-dependencies]
simdpath-codegen = { path = "../simdpath-codegen" }
md5 = "0.7.0"
proc-macro2 = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
test-case = "1.2.1"

[features]
default = ["simd"]
simd = []

[[bench]]
name = "simdpath_stack_based_vs_stackless"
harness = false

[[bench]]
name = "find_byte_benches"
harness = false

[[bench]]
name = "find_byte_sequence_benches"
harness = false

[[bench]]
name = "depth_benches"
harness = false

[[bench]]
name = "find_any_of_sequences_benches"
harness = false
