[package]
name = "rsonpath-benchmarks"
authors = [
    "Mateusz Gienieczko <mat@gienieczko.com>",
    "Charles Paperman <charles.paperman@inria.fr>",
]
version = "0.9.2"
edition = "2021"
description = "Benchmark suite for the `rsonpath` project."
readme = "./README.md"
license = "MIT"
keywords = ["rsonpath", "jsonpath", "query", "simd", "benchmark"]
exclude = ["/data"]
categories = ["text-processing", "development-tools"]
repository = "https://github.com/V0ldek/rsonpath-benchmarks"

[[bin]]
path = "src/main.rs"
name = "pathimpl"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.3", default-features = false }
criterion = "0.5.1"
eyre = "0.6.12"
flate2 = "1.0.35"
hex-literal = "0.4.1"
indicatif = "0.17.9"
jni = { version = "0.21.1", features = ["invocation", "default"] }
jsonpath-rust = "0.7.3"
libc = "0.2.168"
lazy_static = "1.5.0"
serde_json = "1.0.134"
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["blocking"] }
rsonpath-lib = { version = "0.9.2", default-features = false }
rsonpath-syntax = { version = "0.3.1", default-features = false }
serde_json_path = "0.7.1"
tar = "0.4.43"
thiserror = "2.0.9"
once_cell = "1.20.3"
# Added by Ricardo
paste = "1.0.15"
ptr_hash = "1.1.0" # new crate for performant minimal perfect hash functions in rust
sux = "0.7.2" # New crate for static functions (an alternative to MPHF)
dsi-progress-logger = "0.8.1" # Needed to run sux code

[patch.crates-io]
rsonpath-lib = { path = "../rsonpath-lib" }
rsonpath-syntax = { path = "../rsonpath-syntax" }

[dev-dependencies]
itertools = "0.13.0"
regex = "1.11.1"
memchr = "2.7.4"

[features]
default = ["simd"]
simd = ["rsonpath-lib/simd"]
empty-list-opt = ["rsonpath-lib/empty-list-opt"]

[build-dependencies]
eyre = "0.6.12"

[profile.dev]
lto = false

[profile.release]
lto = "thin"
debug = 1

[[bench]]
name = "main"
harness = false

[[bench]]
name = "main_micro"
harness = false

[[bench]]
name = "rsonpath_query_compilation"
harness = false

[[bench]]
name = "rust_native"
harness = false

# Added by Ricardo
[[bench]]
name = "lut_benches"
harness = false