[package]
name = "rsonpath-benchmarks"
authors = [
    "Mateusz Gienieczko <mat@gienieczko.com>",
    "Charles Paperman <charles.paperman@inria.fr>",
]
version = "0.10.0"
edition = "2021"
description = "Benchmark suite for the `rsonpath` project."
readme = "./README.md"
license = "MIT"
keywords = ["rsonpath", "jsonpath", "query", "simd", "benchmark"]
exclude = ["/data"]
categories = ["text-processing", "development-tools"]
repository = "https://github.com/V0ldek/rsonpath-benchmarks"

[[bin]]
path = "src/main.rs"
name = "pathimpl"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.5", default-features = false }
criterion = "0.8.1"
eyre = "0.6.12"
flate2 = "1.1.8"
hex-literal = "1.0.0"
indicatif = "0.18.3"
jni = { version = "0.21.1", features = ["invocation", "default"] }
jsonpath-rust = "1.0.4"
lazy_static = "1.5.0"
serde_json = "1.0.149"
sha2 = "0.10.9"
reqwest = { version = "0.13.1", features = ["blocking"] }
rsonpath-lib = { version = "0.10.0", default-features = false }
rsonpath-syntax = { version = "0.4.0", default-features = false }
serde_json_path = "0.7.2"
tar = "0.4.44"
thiserror = "2.0.18"

[patch.crates-io]
rsonpath-lib = { path = "../rsonpath-lib" }
rsonpath-syntax = { path = "../rsonpath-syntax" }

[dev-dependencies]
itertools = "0.14.0"
regex = "1.12.2"
memchr = "2.7.6"

[features]
default = ["simd"]
simd = ["rsonpath-lib/simd"]
jsurfer = []

[build-dependencies]
eyre = "0.6.12"

[profile.dev]
lto = false

[profile.release]
lto = "thin"
debug = 1

[[bench]]
name = "main"
harness = false

[[bench]]
name = "main_micro"
harness = false

[[bench]]
name = "rsonpath_query_compilation"
harness = false

[[bench]]
name = "rust_native"
harness = false
