[package]
version = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-lib"
description = "Blazing fast JSONPath query engine powered by SIMD. Core library of `rsonpath`."
keywords = ["json", "jsonpath", "query", "search", "simd"]
exclude = [
    "/tests",
    "/proptest-regressions",
    "/src/classification/classifier_correctness_tests.rs",
    "/src/classification/classifier_correctness_tests.proptest-regressions",
]
categories = ["text-processing"]
rust-version = "1.67.1"

[lib]
bench = false
name = "rsonpath"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
cfg-if = { workspace = true }
log = { workspace = true }
memmap2 = "0.9.5"
rsonpath-syntax = { workspace = true }
smallvec = { version = "1.13.2", features = ["union"] }
static_assertions = "1.1.0"
thiserror = { workspace = true }
vector-map = "1.0.1"

[dev-dependencies]
itertools = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }

[features]
default = ["simd"]
arbitrary = ["dep:arbitrary"]
simd = []
multithread = []

[[example]]
name = "approx_spans_usage"
path = "examples/approx_spans_usage.rs"
doc-scrape-examples = true

[lints]
workspace = true
