[package]
version = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-lib"
description = "Blazing fast JSONPath query engine powered by SIMD. Core library of `rsonpath`."
keywords = ["json", "jsonpath", "query", "search", "simd"]
exclude = [
    "/tests",
    "/proptest-regressions",
    "/src/classification/classifier_correctness_tests.rs",
    "/src/classification/classifier_correctness_tests.proptest-regressions",
]
categories = ["text-processing"]
rust-version = "1.67.1"

[lib]
bench = false
name = "rsonpath"

[[bin]]
# Added by Ricardo
name = "lut"
path = "src/lut_main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
cfg-if = { workspace = true }
log = { workspace = true }
memmap2 = "0.9.5"
rsonpath-syntax = { workspace = true }
smallvec = { version = "1.13.2", features = ["union"] }
static_assertions = "1.1.0"
thiserror = { workspace = true }
vector-map = "1.0.1"

# Added by Ricardo
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0"}
serde_cbor = "0.11.2" # for saving lookup-tables in the cbor format. Warning: PROJECT IS ARCHIVED
ph = "0.8.3" # for perfect hashing
csv = "1.3.0"
stats_alloc = "0.1.10" # for measuring heap size of runtime datastructures such as the lookup-table
rand = { version = "0.8", default-features = false, features = ["small_rng"] } # for randomizing the hashfunctions of the lookup-tables
siphasher = "1.0" # for the phf_crate code
clap = { version = "4.5.20", features = ["derive"]}
itertools = "0.13.0"
rayon = {version = "1.10"}
simple_logger = "4.3.3"
lazy_static = "1.4" # for using static objects
ptr_hash = "1.1.0" # new crate for performant minimal perfect hash functions in rust
sux = "0.7.2" # New crate for static functions (an alternative to MPHF)
dsi-progress-logger = "0.8.1" # Needed to run sux code

[dev-dependencies]
itertools = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }

[features]
default = ["simd"]
arbitrary = ["dep:arbitrary"]
simd = []
empty-list-opt = []

[[example]]
name = "approx_spans_usage"
path = "examples/approx_spans_usage.rs"
doc-scrape-examples = true

[lints]
workspace = true