[package]
version = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-lib"
description = "Blazing fast JSONPath query engine powered by SIMD. Core library of `rsonpath`."
keywords = ["json", "jsonpath", "query", "search", "simd"]
exclude = [
    "/tests",
    "/proptest-regressions",
    "/src/classification/classifier_correctness_tests.rs",
    "/src/classification/classifier_correctness_tests.proptest-regressions",
]
categories = ["text-processing"]
rust-version = "1.89.0"

[lib]
bench = false
name = "rsonpath"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
cfg-if = { workspace = true }
log = { workspace = true }
memmap2 = "0.9.9"
rsonpath-syntax = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
smallvec = { version = "1.15.1", features = ["union"] }
static_assertions = "1.1.0"
thiserror = { workspace = true }
vector-map = "1.0.2"

[dev-dependencies]
ciborium = { workspace = true, default-features = true }
insta = { workspace = true, features = ["ron"] }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rmp-serde = { workspace = true }
rsonpath-syntax-proptest = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }

[features]
default = ["simd"]
serde = ["dep:serde", "smallvec/serde", "rsonpath-syntax/serde"]
simd = []

[[example]]
name = "approx_spans_usage"
path = "examples/approx_spans_usage.rs"
doc-scrape-examples = true

[lints]
workspace = true
