[package]
name = "rsonpath-syntax-proptest"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version = "0.4.1"
description = "Test utilities for JSONPath."
readme = "README.md"
keywords = ["jsonpath", "test", "proptest", "arbitrary", "fuzz"]
categories = ["development-tools::testing"]
rust-version = "1.67.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
rsonpath-syntax = { workspace = true }
proptest = { workspace = true }

[features]
default = []

[lints]
workspace = true
