[package]
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-syntax"
version = "0.3.2"
description = "A JSONPath parser."
readme = "README.md"
keywords = ["json", "jsonpath", "query", "search", "parser"]
exclude = ["tests", "src/cli.rs"]
categories = ["parser-implementations", "text-processing"]
rust-version = "1.67.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
owo-colors = { version = "4.1.0", default-features = false, optional = true }
nom = "7.1.3"
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
unicode-width = "0.2.0"

[dev-dependencies]
ciborium = { workspace = true, default-features = true }
insta = { workspace = true, features = ["ron"] }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rmp-serde = { workspace = true }
rsonpath-syntax-proptest = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }

[features]
default = []
arbitrary = ["dep:arbitrary"]
color = ["dep:owo-colors"]
serde = ["dep:serde"]

[lints]
workspace = true