[package]
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-syntax"
version = "0.4.1"
description = "A JSONPath parser."
readme = "README.md"
keywords = ["json", "jsonpath", "query", "search", "parser"]
exclude = ["tests", "src/cli.rs"]
categories = ["parser-implementations", "text-processing"]
rust-version = "1.71.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
owo-colors = { version = "4.2.3", default-features = false, optional = true }
nom = "8.0.0"
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
unicode-width = "0.2.2"

[dev-dependencies]
ciborium = { workspace = true, default-features = true }
insta = { workspace = true, features = ["ron"] }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rmp-serde = { workspace = true }
rsonpath-syntax-proptest = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }

[features]
default = []
color = ["dep:owo-colors"]
serde = ["dep:serde"]

[lints]
workspace = true
