[package]
name = "rsonpath-test-codegen"
version = "0.9.4"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
description = "TOML-based test codegen for rsonpath-lib."
readme = "README.md"
license = "MIT"
keywords = ["json", "jsonpath", "query", "simd", "parser"]
categories = [
    "text-processing",
]
repository = "https://github.com/V0ldek/rsonpath"
edition = "2021"
rust-version = "1.70.0"
publish = false

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
proc-macro2 = "1.0.93"
quote = "1.0.38"
heck = { version = "0.5.0" }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
