[package]
name = "rsonpath-test-codegen"
version = "0.10.0"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
description = "TOML-based test codegen for rsonpath-lib."
readme = "README.md"
license = "MIT"
keywords = ["json", "jsonpath", "query", "simd", "parser"]
categories = [
    "text-processing",
]
repository = "https://github.com/V0ldek/rsonpath"
edition = "2021"
rust-version = "1.70.0"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
proc-macro2 = "1.0.105"
quote = "1.0.43"
heck = { version = "0.5.0" }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
