[package]
name = "rsonpath-test"
version = "0.9.1"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
description = "Just a build script for the auto test generation."
readme = "README.md"
license = "MIT"
keywords = ["json", "jsonpath", "query", "simd", "parser"]
categories = ["text-processing"]
repository = "https://github.com/V0ldek/rsonpath"
edition = "2021"
rust-version = "1.70.0"
publish = false

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
pretty_assertions = "1.4.1"
rsonpath-lib = { version = "0.9.1", path = "../rsonpath-lib" }
rsonpath-syntax = { version = "0.3.0", path = "../rsonpath-syntax" }

[build-dependencies]
eyre = "0.6.12"
glob = "0.3.1"
md5 = "0.7.0"
rsonpath-test-codegen = { version = "0.9.1", path = "../rsonpath-test-codegen" }
