[package]
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath-test"
description = "Just a build script for the auto test generation."
readme = "README.md"
keywords = ["json", "jsonpath", "query", "simd", "parser"]
categories = ["text-processing"]
rust-version = "1.70.0"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rsonpath-lib = { workspace = true }
rsonpath-syntax = { workspace = true }

[build-dependencies]
eyre = "0.6.12"
glob = "0.3.2"
md5 = "0.7.0"
rsonpath-test-codegen = { version = "0.9.3", path = "../rsonpath-test-codegen" }
